--- a/index.html
+++ b/index.html
@@ -151,21 +151,21 @@
 
                         <h2>General Structure of Current Education System.</h2>
                         <p>Before we begin, let's set a baseline.</p>
-                        <p>In Indonesia, the standard mandatory education system are divided into several levels, these are called <i>"Kelas *"</i> with <i>*</i> being the advancement level. The advancement level are divided into three categories. The elementary ranges from <i>Kelas</i> 1 to 6, middle school ranges from <i>Kelas</i> 7 to 9, and high school ranges from <i>Kelas</i> 10 to 12. A typical student progresses a <i>Kelas</i> every year. A student that failed can repeat a <i>Kelas</i>. The number of repeat allowed varies across school's </p>
+                        <p>In Indonesia, the standard mandatory education system are divided into several levels, these are called <i>"Kelas *"</i> with <i>*</i> being the advancement level. The advancement levels are divided into three categories. The elementary ranges from <i>Kelas</i> 1 to 6, middle school ranges from <i>Kelas</i> 7 to 9, and high school ranges from <i>Kelas</i> 10 to 12. A typical student progresses a <i>Kelas</i> every year. A student that failed can repeat a <i>Kelas</i>. The number of repeat allowed varies across schools.</p>
 
-                        <p>When a person are not capable to follow the standard structure of the school system for any reason, they are given a chance to enroll and gain a standard education certificates, which are divided into three certificates based on the three categories mentioned. Those three certificates are <i>Paket</i> A, B, and C. <i>Paket</i> A refers to elementary-equivalent certificate, <i>Paket</i> C refers to highschool-equivalent certificate.</p>
+                        <p>When a person are not capable to follow the standard structure of the school system for any reason, they are given chances to enroll and gain standard education certificates, which are divided into three certificates based on the three categories mentioned. Those three certificates are <i>Paket</i> A, B, and C. <i>Paket</i> A refers to elementary-equivalent certificate, <i>Paket</i> C refers to highschool-equivalent certificate.</p>
 
                         <p>Standard mandatory education system on other countries seems to follow a similar general structure.</p>
                         <div class="py-3"></div>
 
                         <h2>The Problem With Fixed Progression.</h2>
-                        <p>The current system favors only those who are able to follow the progression. Student's brain development stages varies, the same goes to their comprehension capabilities of different subjects. Concepts always build on top of another. When a student fails to grasp a concept, it is guaranteed for them to fail the next concept that builds on top of it. The education system is not made to account for this.</p>
+                        <p>The current system favors only those who are able to follow the progression. Students' brain development stages vary, the same goes to their comprehension capabilities of different subjects. Concepts always build on top of another. When a student fails to grasp a concept, it is guaranteed for them to fail the next concept that builds on top of it. The education system is not made to account for this.</p>
 
                         <p>This problem is hard to spot when students are still in their earlier grades. It is very easy to brush off when a student doesn't understand certain concepts, under a pretense that the system is trusting that students will understand it eventually in the future grades. It is also common for teachers to be overwhelmed by the amount of workload from grading papers, taking their focus from identifying students that requires attention into something that should be automated.</p>
 
                         <p>This problem eventually piles up into a large issue, where a student is expected to understand current concepts, when a lot of previous concepts are not understood.</p>
 
-                        <p>Just because a student is failing to understand one concept at their earlier grades, the rest of their grade becomes compromised. It's almost like a soldier marching in a group lead by an iron fist. Once they stumble and fall, they got trampled and replaced.</p>
+                        <p>Just because a student is failing to understand one concept at their earlier grades, the rest of their grades become compromised. It's almost like a soldier marching in a group lead by an ruthless leader. Once they stumble and fall, they got trampled and replaced.</p>
 
                         <p>Although this is an issue, it is also need to be known that a fixed progression provides benefits too. A constant progression forces a student to have a sense of urgency, which is needed when a student lacks the motivation to study. This might be the reason why this system remains the same.</p>
                         <div class="py-3"></div>
@@ -201,7 +201,7 @@
                         <div class="py-3"></div>
 
                         <h2>More Opinions.</h2>
-                        <p>The three main gripes that I have with the current system is a deadly combination that would cost generation their livelihoods. As a summary, the education system progresses constantly, despite the shortcomings that a student might face. As a result, the students that fails to understand a concept will fail to understand the following concepts which builds on top of it. Students are faced with punishments, but not all students are consistently given solutions. This cycle repeats, causing the problem to root deeper, and creates students that are not ready for societal expectations, which potentially could sabotage the student's future.</p>
+                        <p>The three main gripes that I have with the current system is a deadly combination that would cost generation their livelihoods. As a summary, the education system progresses constantly, despite the shortcomings that a student might face. As a result, the students that fail to understand a concept will fail to understand the following concepts which builds on top of it. Students are faced with punishments, but not all students are consistently given solutions. This cycle repeats, causing the problem to root deeper, and creates students that are not ready for societal expectations, which potentially could sabotage the student's future.</p>
 
                         <p>The reason why this education section is really long comes from how many pointless stress, depression, and deaths that the education system has directly or indirectly claimed, and I can't help but think that it might be time for the system works to be reformed, for the better.</p>
 
@@ -218,12 +218,106 @@
         </div>
         <div class="container h-100" id="gallery">
             <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
+                <div class="col text-center text-md-start d-md-flex flex-row">
                     <div>
                         <h1 class="fw-bolder">Gallery.</h1>
-                        <p>This is a simple description about this testing website.</p>
+                        <p>This page contains my artworks and painting studies on <a href="#gallery2024">2024</a> and <a href="#gallery2025">2025</a>. My comments will occasionally be seen beside my artworks.</p>
+                    </div>
+                    <div class="d-none d-md-block p-lg-5"></div>
+                </div>
+                <div class="col d-none d-md-block"></div>
+            </div>
+            <div class="primary bd-1px"></div>
+            <div class="p-1"></div>
+            <div class="row align-items-start g-1" id="gallery2025">
+                <div class="p-5 p-lg-4 w-100"></div>
+                <div class="col col-12"><h1 class="fw-bolder">2025.</h1></div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-1.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-4.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-3.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-5.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-6.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-7.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-8.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-9.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-10.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/art-2025-2.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-8">
+                    <img src="assets/art-2025-11.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-12">
+                    <img src="assets/art-2025-12.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-12">
+                    <img src="assets/art-2025-13.png" alt="art 2024 1" class="w-100">
+                </div>
+                <div class="col col-12 col-md-12">
+                    <img src="assets/art-2025-14.png" alt="art 2024 1" class="w-100">
+                </div>
+            </div>
+            <div class="row align-items-start g-1" id="gallery2024">
+                <div class="p-5 p-lg-4 w-100"></div>
+                <div class="col col-12"><h1 class="fw-bolder">2024.</h1></div>
+                <img src="assets/art-2024-5.png" alt="" class="col col-12 col-xl-10">
+                <div class="col col-12 col-xl-2 py-2 px-xl-3 p-xxl-4">
+                    <p>This painting is made for the purpose of box-brush painting as well as using the <a href="https://www.artstation.com/learning/series/E5/practical-composition">abstract environment approach</a>. The color pallete and shape design is influenced by the game <a href="https://store.steampowered.com/app/312520/Rain_World/">Rain World</a>. To me, this piece feels "windy quiet". I am really proud of how this painting turned out. I really love how each shapes fall into the right place. It's nice.</p>
+                </div>
+                <img src="assets/art-2024-6.png" alt="" class="col col-12 col-xl-10">
+                <div class="col col-12 col-xl-2 py-2 px-xl-3 p-xxl-4">
+                    <p>This painting is meant to be the opposite in tone of the previous piece. The warmth is flipped to cold, making it quiet but under pressure. The big figure in the background is inspired by <a href="https://evangelion.fandom.com/wiki/Evangelion">evangelion humanoid robot</a>. I was rewatching the movies at this time. Just like the previous art, I'm implementing abstract environment as a way to come up with composition.</p>
+                </div>
+                <div class="col col-12">
+                    <div class="row g-1">
+                        <img src="assets/art-2024-8.png" alt="" class="col col-12 col-md-6 col-lg-5 ms-0">
+                        <img src="assets/art-2024-9.png" alt="" class="col col-12 col-md-6 col-lg-5 ms-0">
+                        <div class="col col-12 col-lg-2 align-self-start py-3 px-md-3 p-xxl-4">
+                            <p>The two paintings are my attempt at emulating <a href="https://x.com/askziye">askziye</a>'s style. I don't think I have captured the style yet. Sometimes there are subtle things in askziye's art style that makes the art piece unqiue to them. Perhaps the lighting, the shape design, the details. I'm planning to return to this.</p>
+                        </div>
                     </div>
                 </div>
+                <div class="col col-12">
+                    <div class="row g-1">
+                        <img src="assets/art-2024-4.png" alt="" class="col col-12 col-md-6 col-lg-5 ms-0">
+                        <img src="assets/art-2024-7.png" alt="" class="col col-12 col-md-6 col-lg-5 ms-0">
+                        <div class="col col-12 col-lg-2 align-self-start py-3 px-md-3 px-xl-4">
+                            <p>The two pieces are meant for my hair painting study. Sir Longnecksalot got his name because after connecting the head and the body, I realized how long his neck is. However, this realization quickly spreads to other of my artworks. I draw giraffe necks.</p>
+                        </div>
+                    </div>
+                </div>
+                <img src="assets/art-2024-2.png" alt="">
+                <div class="col">
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 align-items-center g-1">
+                        <img src="assets/art-2024-1.png" alt="" class="col">
+                        <div class="col py-3 px-md-3 px-xl-4">
+                            <p>This art was for a wattpad cover, it's one of the main teachers in a magic academy. I was trying out writing at the time, and I don't really like how the book cover is just an Arial font of the book title.</p>
+                        </div>
+                        <img src="assets/art-2024-3.png" alt="" class="col">
+                        <div class="col py-3 px-md-3 px-xl-4">
+                            <p>This painting was made when I start to get into a simpler style, compared to the semi-realistic approach. I tried to do less texturing and focus more on simplifying shapes.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="py-5 py-lg-4 w-100"></div>
             </div>
         </div>
         <div class="container h-100" id="leafboard">
@@ -342,6 +436,7 @@
                 if (button) {button.classList.add(css_title_highlighter)}
             }, transition_duration);
             document.title = capitalize(id)
+            scroll_top()
         }
         function capitalize(string) {
             let strings = string.split("-")
