--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 align-items-center g-1">
                         <img src="assets/art-2024-1.png" alt="" class="col">
                         <div class="col py-3 px-md-3 px-xl-4">
-                            <p>This art was for a wattpad cover, it's one of the main teachers in a magic academy. I was trying out writing at the time, and I don't really like how the book cover is just an Arial font of the book title.</p>
+                            <p>This art was for a wattpad cover, she's one of the main teachers in a magic academy. I was trying out writing at the time, and I don't really like how the book cover is just an Arial font of the book title.</p>
                         </div>
                         <img src="assets/art-2024-3.png" alt="" class="col">
                         <div class="col py-3 px-md-3 px-xl-4">
