leafboard project updated

--- a/index.html
+++ b/index.html
@@ -321,13 +321,46 @@
             </div>
         </div>
         <div class="container h-100" id="leafboard">
-            <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
+            <div class="row align-items-center align-content-center align-content-md-start align-content-xxl-center min-h-100">
+                <div class="p-5 p-xxl-0 w-100"></div>
+                <div class="col text-center text-xxl-start col-12 col-xxl-6">
                     <div>
                         <h1 class="fw-bolder">Leafboard.</h1>
-                        <p>This is a simple description about this testing website.</p>
+                        <p><a href="https://github.com/dinnoyow/leafboard/releases" target="_blank">Leafboard</a> is a soundboard desktop application made with <a href="https://godotengine.org/" target="_blank">Godot</a>.</p>
                     </div>
                 </div>
+                <div class="p-1 d-xxl-none"></div>
+                <div class="col col-12 col-xxl-6">
+                    <img src="assets/Leafboard-1.png" alt="" class="w-100">
+                </div>
+                <div class="p-5 p-xxl-0 w-100"></div>
+            </div>
+            <div class="primary bd-1px"></div>
+            <div class="row g-4">
+                <div class="p-5 w-100"></div>
+                <div class="col col-12 text-center">
+                    <h1 class="fw-bolder">It's Straightforward.</h1>
+                    <p>Create a category, drag and drop your .mp3 or .wav, name your sound, click and play. You can add tags to the sounds to allow searching them by tags or by name.</p>
+                </div>
+                <div class="col col-12 col-md-4 text-center">
+                    <img src="assets/Leafboard-2.png" alt="" class="rounded-4 w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/Leafboard-3.png" alt="" class="rounded-4 w-100">
+                </div>
+                <div class="col col-12 col-md-4">
+                    <img src="assets/Leafboard-4.png" alt="" class="rounded-4 w-100">
+                </div>
+                <div class="p-5 w-100"></div>
+            </div>
+            <div class="primary bd-1px"></div>
+            <div class="row">
+                <div class="p-5 w-100"></div>
+                <div class="col col-12 text-center">
+                    <h1 class="fw-bolder">Get them here.</h1>
+                    <button class="btn btn-primary" onclick="window.open('https://github.com/dinnoyow/leafboard/releases', '_blank');">Download</button>
+                </div>
+                <div class="p-5 w-100"></div>
             </div>
         </div>
         <div class="container h-100" id="grinders-forge">
