doki pop page added

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                             </a>
                             <ul class="collapse dropdown-menu dropdown-menu-end dropdown-center primary bg-2 bd-1px p-1 rounded-3 overflow-hidden">
                                 <li class="dropdown-item rounded-1 small p-2" onclick="show('leafboard')">Leafboard</li>
-                                <li class="dropdown-item rounded-1 small p-2" onclick="show('grinders-forge')">Grinders Forge</li>
-                                <li class="dropdown-item rounded-1 small p-2" onclick="show('bijou-may-cry')">Bijou May Cry</li>
+                                <li class="dropdown-item rounded-1 small p-2" onclick="show('dokipopfever')">DokiPop! Fever</li>
                             </ul>
                         </li>
                     </ul>
@@ -363,21 +362,53 @@
                 <div class="p-5 w-100"></div>
             </div>
         </div>
+        <div class="container h-100" id="dokipopfever">
+            <div class="row align-items-center align-content-md-start align-content-lg-center h-100">
+                <div class="p-5 w-100 d-block d-lg-none"></div>
+                <div class="col col-12 col-lg-6 text-center text-lg-start order-1 order-lg-0 d-flex flex-row">
+                    <div>
+                        <h1 class="fw-bolder d-none d-lg-block">DokiPop! Fever.</h1>
+                        <p><a href="https://alantellezs.itch.io/dokipop-fever" target="_blank">DokiPop! Fever</a> is a game made for the <a href="https://itch.io/jam/doki-jam" target="_blank">Doki Jam!</a> game jam, made by a team of 5, <a href="https://x.com/AlanTellezS" target="_blank">@AlanTellezS</a>, <a href="https://x.com/StarisDead_" target="_blank">@StarisDead_</a>, <a href="https://x.com/q_qats" target="_blank">@q_qats</a>, <a href="https://x.com/zephysonas" target="_blank">@zephysonas</a>, and <a href="https://x.com/dinnoyow" target="_blank">me</a></p>
+                    </div>
+                    <div class="p-0 px-lg-5"></div>
+                </div>
+                <div class="col col-12 col-lg-6 order-0 order-lg-1">
+                    <img src="assets/DokiPop-1.png" alt="" class="w-100">
+                </div>
+                <div class="p-5 w-100 d-block d-lg-none order-0"></div>
+                <div class="p-5 w-100 d-block d-lg-none order-1"></div>
+            </div>
+            <div class="primary bd-1px"></div>
+            <div class="row g-4 text-center">
+                <div class="p-5 w-100"></div>
+                <h1 class="fw-bolder">Gameplay.</h1>
+                <p>When the gameplay starts, bubbles will spawn and fall to the center. By clicking and dragging the mouse, you can create a chain from one bubble to another. Once you release the mouse, all bubbles join together to form a bigger bubble. When the bubble reaches a certain size, it pops!</p>
+                <div class="col col-12 col-md-4" style="min-height: 240px;">
+                    <iframe width="996" height="560" src="https://www.youtube.com/embed/UDqU043TRu0" title="DokiPOP! Fever - Force Popping" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="w-100 h-100 rounded-4"></iframe>
+                </div>
+                <div class="col col-12 col-md-4">
+                    <iframe width="500" height="281" src="https://www.youtube.com/embed/FHHKDT7i0yg" title="DokiPOP! - Fever Chaining" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="w-100 h-100 rounded-4"></iframe>
+                </div>
+                <div class="col col-12 col-md-4">
+                    <iframe width="500" height="281" src="https://www.youtube.com/embed/M7RpxO6vWds" title="DokiPOP! Fever - Skill use" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="w-100 h-100 rounded-4"></iframe>
+                </div>
+                <div class="p-5 w-100"></div>
+            </div>
+            <div class="primary bd-1px"></div>
+            <div class="row">
+                <div class="p-5 w-100"></div>
+                <div class="col col-12 text-center">
+                    <h1 class="fw-bolder">Play them here!</h1>
+                    <button class="btn btn-primary" onclick="window.open('https://alantellezs.itch.io/dokipop-fever', '_blank');">Play</button>
+                </div>
+                <div class="p-5 w-100"></div>
+            </div>
+        </div>
         <div class="container h-100" id="grinders-forge">
             <div class="row align-items-center h-100">
                 <div class="col text-center text-md-start">
                     <div>
                         <h1 class="fw-bolder">Grinders Forge.</h1>
-                        <p>This is a simple description about this testing website.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container h-100" id="bijou-may-cry">
-            <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
-                    <div>
-                        <h1 class="fw-bolder">Bijou May Cry.</h1>
                         <p>This is a simple description about this testing website.</p>
                     </div>
                 </div>
