--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./node-modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css-files/theme.css">
     <link rel="stylesheet" href="./node-modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="icon" href="assets/logo-signature.png">
 </head>
 <body class="vh-100 d-flex flex-column">
     <video src="assets/opening-video.mp4" autoplay muted loop class="w-100 h-100 object-fit-cover" style="z-index: -1; position: fixed;"></video>
@@ -46,7 +47,7 @@
                             </a>
                             <ul class="collapse dropdown-menu dropdown-menu-end dropdown-center primary bg-2 bd-1px p-1 rounded-3 overflow-hidden">
                                 <li class="dropdown-item rounded-1 small p-2" onclick="show('leafboard')">Leafboard</li>
-                                <li class="dropdown-item rounded-1 small p-2" onclick="show('dokipopfever')">DokiPop! Fever</li>
+                                <li class="dropdown-item rounded-1 small p-2" onclick="show('doki-pop-fever')">DokiPop! Fever</li>
                             </ul>
                         </li>
                     </ul>
@@ -362,7 +363,7 @@
                 <div class="p-5 w-100"></div>
             </div>
         </div>
-        <div class="container h-100" id="dokipopfever">
+        <div class="container h-100" id="doki-pop-fever">
             <div class="row align-items-center align-content-md-start align-content-lg-center h-100">
                 <div class="p-5 w-100 d-block d-lg-none"></div>
                 <div class="col col-12 col-lg-6 text-center text-lg-start order-1 order-lg-0 d-flex flex-row">
@@ -499,7 +500,7 @@
                 if (scrolltop) {scroll_top()}
                 if (button) {button.classList.add(css_title_highlighter)}
             }, transition_duration);
-            document.title = capitalize(id)
+            document.title = capitalize(id) + " - dinnoyow"
             scroll_top()
             jumpTo(id)
         }
@@ -534,7 +535,6 @@
                 `;
             }
         }
-        displaySocialMedia();
         function showFromURL() {
             let url = window.location.href;
             let urlID = "";
@@ -555,8 +555,8 @@
                     case "leafboard":
                         show("leafboard")
                     break;
-                    case "dokipopfever":
-                        show("dokipopfever")
+                    case "doki-pop-fever":
+                        show("doki-pop-fever")
                     break;
                     default:
                         show("home")
@@ -566,6 +566,7 @@
                 show("home")
             }
         }
+        displaySocialMedia();
         showFromURL()
         onpopstate = (event) => {showFromURL()}
     </script>
